# protoken-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PERFORMANCE.md  README.md  audit.toml  design-serialization.md  research-prior-art.md
.cargo/: mutants.toml
.github/workflows/: ci.yml
benches/: protoken_bench.rs
examples/: benchmark.rs  gen_reference_vectors.rs  gen_test_vectors.rs
fuzz/: Cargo.toml  proto3.dict
fuzz/fuzz_targets/: exercise_token.rs  parse_keys.rs  parse_payload.rs  parse_signed_token.rs  roundtrip.rs
notes/: benchmark-results.md  cargo-mutants-analysis.md  research-groth16-trusted-setup.md  research-mldsa-key-formats.md  research-p256-vs-ed25519.md  research-pq-signatures.md  research-protobuf-determinism.md  research-subject-identifiers.md  research-symmetric-key-proofs.md  research-zk-friendly-hashes.md  security-audit-2026-04.md
scripts/: bench-to-csv.sh
src/: error.rs  keys.rs  lib.rs  main.rs  poseidon.rs  proto3.rs  serialize.rs  sign.rs  snark.rs  types.rs  verify.rs
testdata/: reference_vectors.json  v0_vectors.json  vectors.json
tests/: audit_poc.rs  reference_vectors.rs  test_vectors.rs
