[package]
name = "protoken"
version = "0.1.0"
edition = "2021"
description = "Protobuf-inspired signed tokens — a minimal, fast alternative to JWTs"

[dependencies]
ring = "0.17"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime = "2"
base64 = "0.22"
hex = "0.4"
thiserror = "2"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
