[package]
name = "protoken"
version = "0.1.0"
edition = "2021"
description = "Protobuf-inspired signed tokens — a minimal, fast alternative to JWTs"

[dependencies]
# Crypto (RustCrypto ecosystem)
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
hmac = "0.12"
sha2 = "0.10"
ml-dsa = { version = "0.0", features = ["rand_core"] }
rand = "0.8"

# Serialization & CLI
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime = "2"
base64 = "0.22"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "protoken_bench"
harness = false

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
