[package]
name = "protoken-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
protoken = { path = ".." }

[[bin]]
name = "parse_payload"
path = "fuzz_targets/parse_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_signed_token"
path = "fuzz_targets/parse_signed_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false
